--- a/book/ml_principles/series/nlp.ipynb
+++ b/book/ml_principles/series/nlp.ipynb
@@ -67,27 +67,29 @@
     "> _The **airplane** was parked in the hangar because **it** had a technical problem_. \n",
     "\n",
     "Als mens begrijpen we onmiddellijk dat **_it_** hier verwijst naar **_airplane_** en niet naar _hangar_, maar hoe lost _self-attention_ dit op?  \n",
-    "Om dit te begrijpen, kunnen we denken aan een bibliotheek waarin we ($\\approx$ het model) op zoek gaan naar informatie over een bepaald onderwerp ($\\approx$ token). Die informatie staat verspreid over verschillende boeken ($\\approx$ andere tokens in de sequentie). _Self-attention_ voert een dergelijke zoektocht uit op basis van drie belangrijke componenten die moeten worden geleerd tijdens de modeltraining.\n",
+    "Om dit te begrijpen, kunnen we denken aan een bibliotheek waarin we ($\\approx$ het model) op zoek gaan naar informatie over een bepaald onderwerp ($\\approx$ woord[^token]). Die informatie staat verspreid over verschillende boeken ($\\approx$ andere woorden[^token] in de sequentie). _Self-attention_ voert een dergelijke zoektocht uit op basis van drie belangrijke componenten die moeten worden geleerd tijdens de modeltraining.\n",
     "1. **_Query_ (Q)**: De _zoekvraag_; dit is bijvoorbeeld (een abstracte vorm van): \"Ik ben een voornaamwoord... naar wie verwijs ik?\"\n",
     "\n",
-    "2. **_Key_ (K)**: De eigenschappen die een woord/token _adverteert_; bijvoorbeeld: \"Ik ben een zelfstandig naamwoord, een mogelijk onderwerp...\". Dit kunnen we vergelijken met de labels op de rug van de boeken in de bibliotheek.\n",
+    "2. **_Key_ (K)**: De eigenschappen die een woord[^token] _adverteert_; bijvoorbeeld: \"Ik ben een zelfstandig naamwoord, een mogelijk onderwerp...\". Dit kunnen we vergelijken met de labels op de rug van de boeken in de bibliotheek.\n",
     "\n",
-    "3. **_Value_ (V)**: De _betekenis_ van het woord in deze context. Denk aan de daadwerkelijke inhoud van een boek.  \n",
+    "3. **_Value_ (V)**: De _betekenis_ van het woord[^token] in deze context. Denk aan de daadwerkelijke inhoud van een boek.  \n",
     "  \n",
     "De verwerking gaat dan als volgt:\n",
-    "1. Voor ieder token worden de Q, K en V vectoren berekend\n",
-    "2. Ieder token vergelijkt zijn _Query_ met de _Keys_ van de andere woorden wat resulteert in een genormaliseerde score. Bijvoorbeeld:\n",
+    "1. Voor ieder woord[^token] worden de Q, K en V vectoren berekend\n",
+    "2. Ieder woord[^token] vergelijkt zijn _Query_ met de _Keys_ van de andere woorden[^token] wat resulteert in een genormaliseerde score. Bijvoorbeeld:\n",
     "    - `Q(it)` • `K(The)` = 0.0 (niet relevant)\n",
     "    - `Q(it)` • `K(airplane)` = 0.88 (zeer relevant)\n",
     "    - ...\n",
     "    - `Q(it)` • `K(problem)` = 0.65 (relevant)\n",
-    "3. Aan de hand van die score worden voor ieder woord, de _Value_ vectoren (dus de eigenlijke betekenis) van andere woorden telkens anders gewogen (geïntegreerd) in de _self-attention_ output.  \n",
+    "3. Aan de hand van die score worden voor ieder woord[^token], de _Value_ vectoren (dus de eigenlijke betekenis) van andere woorden[^token] telkens anders gewogen (geïntegreerd) in de _self-attention_ output.  \n",
     "  \n",
-    "In de architectuur zitten niet één, maar verschillende (_multi_) _self-attention heads_. Deze worden elk onafhankelijk van elkaar getraind en toegepast. Zo kan bij eenzelfde token tegelijk rekening gehouden worden met verschillende taalkundige eigenschappen (zie onderstaande figuur uit [](https://doi.org/10.48550/arXiv.1706.03762)).\n",
+    "In de architectuur zitten niet één, maar verschillende (_multi_) _self-attention heads_. Deze worden elk onafhankelijk van elkaar getraind en toegepast. Zo kan bij eenzelfde woord[^token] tegelijk rekening gehouden worden met verschillende taalkundige eigenschappen (zie onderstaande figuur uit [](https://doi.org/10.48550/arXiv.1706.03762)).\n",
     "\n",
     "[![](../../../img/attention2.png)](https://arxiv.org/pdf/1706.03762)\n",
     "\n",
-    "De output van de verschillende _heads_ wordt samengevoegd in de output naar volgende lagen. Door hun diepe structuur (zie `N x` bij de blokken in de figuur) kunnen transformers ook veel grotere verbanden leren leggen, dus niet enkel op het niveau van individuele zinnen, maar ook uiteenzettingen, conversaties, enz."
+    "De output van de verschillende _heads_ wordt samengevoegd in de output naar volgende lagen. Door hun diepe structuur (zie `N x` bij de blokken in de figuur) kunnen transformers ook veel grotere verbanden leren leggen, dus niet enkel op het niveau van individuele zinnen, maar ook uiteenzettingen, conversaties, enz.\n",
+    "\n",
+    "[^token]: of beter: _token(s)_ (zie {ref}`tokenization <target-tokenization>`)"
    ]
   },
   {
