Add softmax notebook to neural network section in myst.yml

--- a/book/math_foundations/linear_regression/glm.ipynb
+++ b/book/math_foundations/linear_regression/glm.ipynb
@@ -161,8 +161,38 @@
     "1 & \\sigma(\\pmb{x}_i^T\\pmb{b}) > 0.5 \\\\\n",
     "0 & \\sigma(\\pmb{x}_i^T\\pmb{b}) \\leq 0.5 \n",
     "\\end{cases}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3ef72c5b",
+   "metadata": {},
+   "source": [
+    "(target-logits)=\n",
+    ":::{info} _Logits_\n",
+    "\n",
+    "In de context van logistische regressie noemen we de _lineaire combinatie van de inputs_ (vóór toepassing van de logistische functie) de **logits**:\n",
+    "\n",
+    "$$\n",
+    "z_i = \\pmb{x}_i^T\\pmb{b} = b_1 + b_2x_{i,2} + b_3x_{i,3} + \\ldots\n",
     "$$\n",
     "\n",
+    "De logits representeren dus de \"ruwe\" output van het lineaire deel van het model. Deze waarde kan willekeurig groot of klein zijn (van $-\\infty$ tot $+\\infty$). \n",
+    "\n",
+    "De logistische functie $\\sigma$ transformeert deze logits vervolgens naar kansen in het interval $(0, 1)$:\n",
+    "\n",
+    "$$\n",
+    "\\hat{y}_i = \\sigma(z_i) = \\frac{1}{1 + e^{-z_i}}\n",
+    "$$\n",
+    ":::"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f67cbcc3",
+   "metadata": {},
+   "source": [
     "(target-bin-sim)=\n",
     "### Data simulatie \n",
     "We kunnen terugkijken naar de koffiehuis data simulatie met het volume van de bestelling als de predictor, maar in plaats van de hoeveelheid fooi voorspellen we of er al dan niet een fooi werd achtergelaten."
