--- a/book/math_foundations/nn/perceptron.ipynb
+++ b/book/math_foundations/nn/perceptron.ipynb
@@ -52,7 +52,7 @@
     "1. Inputlaag (_input layer_): De feature waarden $x_1, x_2, \\ldots, x_n$ (net zoals bij regressie)\n",
     "2. Gewichten (_weights_): De parameters $w_1, w_2, \\ldots, w_n$ (analoog aan de coëfficiënten $b_1, b_2, \\ldots, b_n$ bij regressie)\n",
     "3. _Bias_: De parameter $w_1$ (analoog aan het intercept $b_1$ bij regressie), waarbij $x_1=1$\n",
-    "4. Lineaire combinatie: $z = \\sum_{i=1}^{n} w_i x_i = \\pmb{x}^T\\pmb{w}$\n",
+    "4. _{ref}`Logits <target-logits>`_ (lineaire combinatie): $z = \\sum_{i=1}^{n} w_i x_i = \\pmb{x}^T\\pmb{w}$\n",
     "5. Activatiefunctie: $\\phi(z)$ die de lineaire output niet-lineair transformeert\n",
     "6. Output: De uiteindelijke predictie $\\hat{y} = \\phi(z)$"
    ]
@@ -308,7 +308,7 @@
    "source": [
     "## Activatiefuncties\n",
     "(target-activation)=\n",
-    "De **activatiefunctie** $\\phi(z)$ is cruciaal voor de werking van een perceptron. Ze **vertaalt de lineaire combinatie van inputs en gewichten naar een output via een S-vormige (_sigmoid_) transformatie**. Er bestaan verschillende varianten met verschillende eigenschappen. Hieronder bekijken we de meest gebruikelijke:\n",
+    "De **activatiefunctie** $\\phi(z)$ is cruciaal voor de werking van een perceptron. Ze **vertaalt de lineaire combinatie van inputs en gewichten ({ref}`logits <target-logits>`) naar een output via een S-vormige (_sigmoid_) transformatie**. Er bestaan verschillende varianten met verschillende eigenschappen. Hieronder bekijken we de meest gebruikelijke:\n",
     "\n",
     "### 1. Logistische\n",
     "De logistische functie die we al kennen van het logistische regressiemodel:\n",
