--- a/book/math_foundations/linear_regression/glm.ipynb
+++ b/book/math_foundations/linear_regression/glm.ipynb
@@ -170,12 +170,15 @@
    "metadata": {},
    "source": [
     "(target-logits)=\n",
-    ":::{info} _Logits_\n",
-    "\n",
-    "In de context van logistische regressie noemen we de _lineaire combinatie van de inputs_ (vóór toepassing van de logistische functie) de **logits**:\n",
+    ":::{note} _Logits_\n",
+    "In de context van logistische regressie noemen we de lineaire combinatie van de inputs (vóór toepassing van de logistische functie) de **logits**:\n",
     "\n",
     "$$\n",
-    "z_i = \\pmb{x}_i^T\\pmb{b} = b_1 + b_2x_{i,2} + b_3x_{i,3} + \\ldots\n",
+    "\\begin{aligned}\n",
+    "z_i &= \\pmb{x}_i^T\\pmb{b} \\cr\n",
+    "&= b_1 + b_2x_{i,2} + b_3x_{i,3} + \\ldots \\cr\n",
+    "\\pmb{z} &= \\pmb{Xb}\n",
+    "\\end{aligned}\n",
     "$$\n",
     "\n",
     "De logits representeren dus de \"ruwe\" output van het lineaire deel van het model. Deze waarde kan willekeurig groot of klein zijn (van $-\\infty$ tot $+\\infty$). \n",
@@ -184,6 +187,22 @@
     "\n",
     "$$\n",
     "\\hat{y}_i = \\sigma(z_i) = \\frac{1}{1 + e^{-z_i}}\n",
+    "$$\n",
+    "\n",
+    "De term \"logits\" verwijs naar de _logit-functie_. Deze functie is de inverse van de logistische functie:\n",
+    "\n",
+    "$$\n",
+    "\\begin{aligned}\n",
+    "z &= \\sigma(z)^{-1} \\cr\n",
+    "&= \\text{logit}(p) \\cr\n",
+    "&= \\log\\left(\\frac{p}{1-p}\\right)\n",
+    "\\end{aligned}\n",
+    "$$\n",
+    "\n",
+    "voor\n",
+    "\n",
+    "$$\n",
+    "p \\isin (0, 1)\n",
     "$$\n",
     ":::"
    ]
