--- a/book/math_foundations/nn/softmax.ipynb
+++ b/book/math_foundations/nn/softmax.ipynb
@@ -9,11 +9,11 @@
     "\n",
     "Tot nu toe hebben we gezien hoe een {ref}`perceptron <target-perceptron>` met een sigmoïde activatiefunctie gebruikt kan worden voor binaire klassificatie. We zagen ook hoe {ref}`multi-layer perceptrons <target-mlp>` complexere beslissingsgrenzen kunnen leren door meerdere lagen van neuronen te combineren.\n",
     "\n",
-    "Maar wat als we meer dan twee klassen hebben? Bijvoorbeeld: het classificeren van handgeschreven cijfers (0-9) of het herkennen van verschillende diersoorten in afbeeldingen?\n",
+    "Maar wat als we meer dan twee klassen hebben? Bijvoorbeeld: het voorspellen van handgeschreven cijfers (0-9) of het herkennen van verschillende diersoorten in afbeeldingen?\n",
     "\n",
     "## Softmax\n",
     "\n",
-    "Voor binaire klassificatie gebruiken we typisch één output neuron met een logistische activatiefunctie. De output van dat neuron ligt tussen 0 en 1. We interpreteren dit als een conditionele kans $P(y=1|\\mathbf{x})$. Door een _decision boundary_ te kiezen, word de output $\\hat{y}$ binair.  \n",
+    "Voor binaire klassificatie gebruiken we typisch één output neuron met een logistische activatiefunctie. De output van dat neuron ligt tussen 0 en 1. We interpreteren dit als een conditionele kans $P(y=1|\\mathbf{x})$. Door een _decision boundary_ te kiezen, wordt de output $\\hat{y}$ binair.  \n",
     "  \n",
     "Voor multi-class classificatie met $K$ klassen hebben we een andere aanpak nodig:\n",
     "- we voorzien **$K$ output neuronen**: één voor elke klasse\n",
@@ -22,7 +22,7 @@
     "\n",
     "Dit is precies wat de **softmax activatiefunctie** doet.\n",
     "(target-softmax)=\n",
-    "De softmax functie transformeert een vector van $K$ reële getallen (de _{ref}`logits <target-logits>`_ $\\mathbf{z}$) naar een kansverdeling:\n",
+    "De softmax functie transformeert een vector van $K$ reële getallen naar een kansverdeling:\n",
     "\n",
     "$$\n",
     "\\text{softmax}(\\mathbf{z})_k = \\frac{e^{z_k}}{\\sum_{j=1}^{K} e^{z_j}}\n",
@@ -33,7 +33,7 @@
     "Hierdoor liggen alle outputs tussen 0 en 1, is de som van alle outputs exact 1 en krijgen hogere $z_k$ waarden hogere kansen. **De softmax is een generalisatie van de logistische activatiefunctie naar meerdere dimensies**\n",
     "  \n",
     "Gebruik:\n",
-    "- Voor een input $\\mathbf{x}$ produceert het netwerk logits $\\mathbf{z} = h(\\mathbf{x}, \\mathbf{W})$\n",
+    "- Voor een input $\\mathbf{x}$ produceert het netwerk outputs (of _{ref}`logits <target-logits>`_) $\\mathbf{z} = h(\\mathbf{x}, \\mathbf{W})$\n",
     "- Na softmax activatie: $\\text{softmax}(\\mathbf{z})_k = P(y=k|\\mathbf{x})$ voor elke klasse $k$\n",
     "- Predictie: kies de klasse met de hoogste waarschijnlijkheid $\\pmb{\\hat{y}} = \\arg\\max \\text{softmax}(\\mathbf{z})_k$ (bv. $\\pmb{\\hat{y}} = \\begin{bmatrix}0 & 1 & 0 & 0\\end{bmatrix}^T$ bij $K=4$)"
    ]
@@ -486,10 +486,10 @@
     "De softmax activatiefunctie heeft belangrijke gevolgen voor de {ref}`backward pass <target-back-propagation>` tijdens het trainen van het netwerk:\n",
     "\n",
     "### Gekoppelde outputs\n",
-    "In tegenstelling tot de logistische activatiefunctie, waarbij elk neuron onafhankelijk geactiveerd wordt, zijn de softmax outputs **onderling afhankelijk**. De output van één neuron beïnvloedt alle andere outputs door de normalisatie. Dit betekent dat bij het berekenen van de gradiënt met betrekking tot een bepaald logit $z_k$, **alle** softmax outputs een rol spelen.\n",
+    "In tegenstelling tot de logistische activatiefunctie, waarbij elk neuron onafhankelijk geactiveerd wordt, zijn de softmax outputs **onderling afhankelijk**. De output van één neuron beïnvloedt alle andere outputs door de normalisatie. Dit betekent dat bij het berekenen van de gradiënt met betrekking tot een bepaald $z_k$, **alle** softmax outputs een rol spelen.\n",
     "\n",
     "### Partiële afgeleiden\n",
-    "Voor de partiële afgeleide van softmax output $i$ naar logit $j$ geldt:\n",
+    "Voor de partiële afgeleide van softmax output $i$ naar {ref}`logit <target-logit>` $j$ geldt:\n",
     "\n",
     "$$\n",
     "\\frac{\\partial \\text{softmax}(\\mathbf{z})_i}{\\partial z_j} = \n",
@@ -518,7 +518,7 @@
     "\\frac{\\partial \\mathcal{L}_{CE}}{\\partial z_k} = \\text{softmax}(\\mathbf{z})_k - y_k\n",
     "$$\n",
     "\n",
-    "Dit is de voorspelde kans minus de werkelijke target! Deze eenvoudige vorm maakt de backward pass efficiënt en numeriek stabiel, ondanks de complexiteit van de softmax functie zelf."
+    "Dit is de voorspelde kans minus de werkelijke target. Deze eenvoudige vorm maakt de backward pass efficiënt en numeriek stabiel, ondanks de complexiteit van de softmax functie zelf."
    ]
   }
  ],
