--- a/book/math_foundations/nn/softmax.ipynb
+++ b/book/math_foundations/nn/softmax.ipynb
@@ -489,7 +489,7 @@
     "In tegenstelling tot de logistische activatiefunctie, waarbij elk neuron onafhankelijk geactiveerd wordt, zijn de softmax outputs **onderling afhankelijk**. De output van één neuron beïnvloedt alle andere outputs door de normalisatie. Dit betekent dat bij het berekenen van de gradiënt met betrekking tot een bepaald $z_k$, **alle** softmax outputs een rol spelen.\n",
     "\n",
     "### Partiële afgeleiden\n",
-    "Voor de partiële afgeleide van softmax output $i$ naar {ref}`logit <target-logit>` $j$ geldt:\n",
+    "Voor de partiële afgeleide van softmax output $i$ naar {ref}`logit <target-logits>` $j$ geldt:\n",
     "\n",
     "$$\n",
     "\\frac{\\partial \\text{softmax}(\\mathbf{z})_i}{\\partial z_j} = \n",
