--- a/book/math_foundations/prob/probability.ipynb
+++ b/book/math_foundations/prob/probability.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Kansrekenen\n",
     "📚 [^goodfellow]\n",
-    "[^goodfellow]: Dit hoofdstuk is gebaseerd op hoofdstuk 3 uit [Goodfellow et al. (2016)](https://www.deeplearningbook.org/)\n",
+    "[^goodfellow]: Deze sectie is gebaseerd op hoofdstuk 3 uit [Goodfellow et al. (2016)](https://www.deeplearningbook.org/)\n",
     "\n",
     "(target-probability-theory)=\n",
     "Kansrekenen, waarschijnlijkheidsleer of **probabiliteitstheorie** is een wiskundig kader om uitspraken te doen over onzekerheid. Het laat toe om onzekerheid te kwantificeren en biedt axioma's om nieuwe onzekere uitspraken af te leiden uit bestaande.\n",
@@ -115,22 +115,22 @@
     "🧮 Uit (3) volgt de zogenaamde **complement regel** bij kansrekenen:\n",
     "\n",
     "$$\n",
-    "P(\\text{x} \\neq x_i) &= 1 - P(\\text{x} = x_i)\n",
+    "P(\\text{x} \\neq x_i) = 1 - P(\\text{x} = x_i)\n",
     "$$\n",
     ":::\n",
     "\n",
     ":::{note} 🌍\n",
     ":icon: false\n",
     ":class: simple\n",
-    "Een typisch voorbeeld van een discrete kansvariabele is de uitkomst van gooi met een dobbelsteen. Ongeacht het feit of we met een faire of onfaire dobbelsteen te maken hebben, zal de uitkomst met 100% zekerheid $1$, $2$, $3$, $4$, $5$ of $6$ zijn: \n",
+    "Een typisch voorbeeld van een discrete kansvariabele is de uitkomst van gooi met een dobbelsteen. Ongeacht het feit of we met een eerlijke of oneerlijke dobbelsteen te maken hebben, zal de uitkomst met 100% zekerheid $1$, $2$, $3$, $4$, $5$ of $6$ zijn: \n",
     "\n",
     "$$\n",
     "P(x \\isin (1, 2, 3, 4, 5, 6)) = 1\n",
     "$$\n",
     "\n",
-    "Als we naar de kansen op het niveau van de individuele waarden kijken, speelt het al dan niet fair zijn van de dobbelsteen _wel_ een rol.  \n",
+    "Als we naar de kansen op het niveau van de individuele waarden kijken, speelt het al dan niet eerlijk zijn van de dobbelsteen _wel_ een rol.  \n",
     "  \n",
-    "Als de dobbelsteen _fair_ is, zal iedere waarde een gelijke kans hebben om op te treden namelijk $P(x) = \\frac{1}{6}$. Dat volgt uit de eigenschap dat de som van alle kansen $1$ moet zijn en dat we hier op zoek zijn naar een gelijke kans voor iedere waarde:\n",
+    "Als de dobbelsteen _eerlijk_ is, zal iedere waarde een gelijke kans hebben om op te treden namelijk $P(x) = \\frac{1}{6}$. Dat volgt uit de eigenschap dat de som van alle kansen $1$ moet zijn en dat we hier op zoek zijn naar een gelijke kans voor iedere waarde:\n",
     "\n",
     "$$\n",
     "\\begin{align}\n",
@@ -153,7 +153,7 @@
     "P(\\text{x} = x_i) = \\frac{1}{k}\n",
     "$$\n",
     "  \n",
-    "Bij een _onfaire_ dobbelsteen, zullen de verschillende waarden een ongelijke kans hebben om op te treden. Stel dat we te maken hebben met een dobbelsteen waarbij de kans op $6$ twee keer zo groot is als de kans op eender welke andere waarde. Hoe ziet de PMF er dan uit? We kunnen dit eenvoudig uitrekenen aangezien we weten dat:\n",
+    "Bij een _oneerlijke_ dobbelsteen, zullen de verschillende waarden een ongelijke kans hebben om op te treden. Stel dat we te maken hebben met een dobbelsteen waarbij de kans op $6$ twee keer zo groot is als de kans op eender welke andere waarde. Hoe ziet de PMF er dan uit? We kunnen dit eenvoudig uitrekenen aangezien we weten dat:\n",
     "- de som van alle kansen $1$ moet zijn\n",
     "- we voor alle uitkomsten die niet $6$ zijn een zelfde waarde zoeken\n",
     "- de kans op $6$ dubbel zo groot is\n",
@@ -176,8 +176,6 @@
     "P(\\text{x}=6) &= \\frac{2}{7} \n",
     "\\end{align}\n",
     "$$\n",
-    "\n",
-    "\n",
     ":::"
    ]
   },
@@ -256,7 +254,7 @@
    "metadata": {},
    "source": [
     ":::{important}\n",
-    "Als we in het voorbeeld van een faire dobbelsteen de kans willen berekenen op een uitkomst die {u}`oneven is of $6$`, volstaat het om de individuele kansen die daarmee overeenstemmen op te tellen:\n",
+    "Als we in het voorbeeld van een eerlijke dobbelsteen de kans willen berekenen op een uitkomst die {u}`oneven is of $6$`, volstaat het om de individuele kansen die daarmee overeenstemmen op te tellen:\n",
     "\n",
     "$$\n",
     "P(x=1) + P(x=3) + P(x=5) + P(x=6) = \\frac{4}{6} = \\frac{2}{3}\n",
@@ -408,7 +406,7 @@
    "source": [
     "### Theoretische en empirische kansverdelingen\n",
     "\n",
-    "In het algemene geval, weten we bij observaties van random variabelen, behalve de discrete of continue eigenschap, nooit vooraf met welke kansverdeling we precies te maken hebben. In sommige gevallen wordt zonder meer een assumptie gemaakt, bijvoorbeeld, de aanname dat we met een faire dobbelsteen te maken hebben en de PMF dus neerkomt op:\n",
+    "In het algemene geval, weten we bij observaties van random variabelen, behalve de discrete of continue eigenschap, nooit vooraf met welke kansverdeling we precies te maken hebben. In sommige gevallen wordt zonder meer een assumptie gemaakt, bijvoorbeeld, de aanname dat we met een eerlijke dobbelsteen te maken hebben en de PMF dus neerkomt op:\n",
     "$$\n",
     "\\begin{aligned}\n",
     "P(\\text{x} = x_i) &= \\frac{1}{k} \\cr\n",
@@ -550,9 +548,9 @@
     ":::{note} 🌍\n",
     ":icon: false\n",
     ":class: simple\n",
-    "Stel dat we bij een spel niet één, maar twee faire dobbelstenen gooien. We hebben dan te maken met twee kansvariabelen $\\text{x}$ en $\\text{y}$. Wat is de kans dat beide dobbelstenen op $6$ uitkomen?\n",
+    "Stel dat we bij een spel niet één, maar twee eerlijke dobbelstenen gooien. We hebben dan te maken met twee kansvariabelen $\\text{x}$ en $\\text{y}$. Wat is de kans dat beide dobbelstenen op $6$ uitkomen?\n",
     "\n",
-    "Bij twee faire dobbelstenen krijgen we $6 \\times 6 = 36$ mogelijke uitkomsten. In de veronderstelling dat iedere combinatie een gelijke kans heeft, krijgen we:\n",
+    "Bij twee eerlijke dobbelstenen krijgen we $6 \\times 6 = 36$ mogelijke uitkomsten. In de veronderstelling dat iedere combinatie een gelijke kans heeft, krijgen we:\n",
     "\n",
     "| $\\text{x} \\backslash \\text{y}$ | $y=1$ | $y=2$ | $y=3$ | $y=4$ | $y=5$ | $y=6$ |\n",
     "|:---:|:---:|:---:|:---:|:---:|:---:|:---:|\n",
@@ -964,7 +962,7 @@
     ":::{note} 🌍\n",
     ":icon: false\n",
     ":class: simple\n",
-    "Bij een faire dobbelsteen:\n",
+    "Bij een eerlijke dobbelsteen:\n",
     "$$\n",
     "\\mathbb{E}[x] = 1 \\cdot \\frac{1}{6} + 2 \\cdot \\frac{1}{6} + 3 \\cdot \\frac{1}{6} + 4 \\cdot \\frac{1}{6} + 5 \\cdot \\frac{1}{6} + 6 \\cdot \\frac{1}{6} = 3.5\n",
     "$$\n",
@@ -1183,7 +1181,7 @@
     ":::{note} 🌍\n",
     ":icon: false\n",
     ":class: simple\n",
-    "Voor een faire dobbelsteen met $\\mu = 3.5$:\n",
+    "Voor een eerlijke dobbelsteen met $\\mu = 3.5$:\n",
     "$$\n",
     "\\text{Var}(x) = (1-3.5)^2 \\cdot \\frac{1}{6} + (2-3.5)^2 \\cdot \\frac{1}{6} + \\ldots + (6-3.5)^2 \\cdot \\frac{1}{6} \\approx 2.92\n",
     "$$\n",
